Update build properties and enhance notification icons
- Updated build number to 6 and modified build date in build.properties.
- Changed key mappings in ctrl_key_mappings.json to assign specific keycodes to KEYCODE_I, J, K, and L.
- Added functionality in NotificationHelper to create custom notification icons with the letter "N" for navigation mode, improving visual representation in notifications.

--- a/app/src/main/assets/ctrl_key_mappings.json
+++ b/app/src/main/assets/ctrl_key_mappings.json
@@ -28,7 +28,8 @@
       "type": "none"
     },
     "KEYCODE_I": {
-      "type": "none"
+      "type": "keycode",
+      "keycode": "DPAD_UP"
     },
     "KEYCODE_O": {
       "type": "none"
@@ -60,13 +61,16 @@
       "keycode": "PAGE_DOWN"
     },
     "KEYCODE_J": {
-      "type": "none"
+      "type": "keycode",
+      "keycode": "DPAD_LEFT"
     },
     "KEYCODE_K": {
-      "type": "none"
+      "type": "keycode",
+      "keycode": "DPAD_DOWN"
     },
     "KEYCODE_L": {
-      "type": "none"
+      "type": "keycode",
+      "keycode": "DPAD_RIGHT"
     },
     "KEYCODE_Z": {
       "type": "action",
