--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-org.gradle.daemon=false
+org.gradle.daemon=true
 # Ensure Gradle never tries to load native file watchers (broken on Windows 10 build 14393)
 systemProp.org.gradle.native=false
 systemProp.org.gradle.file.events=false
