--- a/app/src/main/assets/common/sym/sym_key_mappings.json
+++ b/app/src/main/assets/common/sym/sym_key_mappings.json
@@ -8,26 +8,24 @@
     "KEYCODE_Y": "👍",
     "KEYCODE_U": "❤️",
     "KEYCODE_I": "😘",
-    "KEYCODE_O": "😁",
+    "KEYCODE_O": "😡",
     "KEYCODE_P": "😉",
     "KEYCODE_A": "😢",
     "KEYCODE_S": "😭",
     "KEYCODE_D": "😱",
-    "KEYCODE_F": "😮",
+    "KEYCODE_F": "😰",
     "KEYCODE_G": "😴",
     "KEYCODE_H": "🤔",
-    "KEYCODE_J": "😋",
-    "KEYCODE_K": "😏",
+    "KEYCODE_J": "🤢",
+    "KEYCODE_K": "🙄",
     "KEYCODE_L": "😌",
-    "KEYCODE_Z": "🙂",
-    "KEYCODE_X": "😃",
+    "KEYCODE_Z": "😔",
+    "KEYCODE_X": "🥳",
     "KEYCODE_C": "😅",
     "KEYCODE_V": "🤗",
-    "KEYCODE_B": "😇",
+    "KEYCODE_B": "🥰",
     "KEYCODE_N": "👎",
-    "KEYCODE_M": "😆"
+    "KEYCODE_M": "😳"
   }
 }
-
-
 
