Updated build properties with new build number and date. Enhanced keyboard layout management by adding layout availability checks and improved autocapitalize functionality. Refactored layout cycling logic to prevent redundant updates and ensure consistent user experience.

--- a/app/src/main/assets/common/sym/sym_key_mappings_page2.json
+++ b/app/src/main/assets/common/sym/sym_key_mappings_page2.json
@@ -17,8 +17,8 @@
     "KEYCODE_G": "\\",
     "KEYCODE_H": "|",
     "KEYCODE_J": "&",
-    "KEYCODE_K": "\"",
-    "KEYCODE_L": "\"",
+    "KEYCODE_K": "\“",
+    "KEYCODE_L": "\”",
     "KEYCODE_Z": "«",
     "KEYCODE_X": "»",
     "KEYCODE_C": "™",
