add microphone permission handling, and implement default user dictionary management. Introduced a new PermissionRequestActivity for managing microphone access and enhanced speech recognition features. Improved dictionary loading logic to support editable user entries and refined suggestion engine for better performance.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,15 @@
             android:launchMode="singleTask"
             android:taskAffinity="com.google.android.inputmethod.latin" />
         
+        <!-- Attività helper per richiedere il permesso del microfono -->
+        <activity
+            android:name=".inputmethod.PermissionRequestActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:exported="false"
+            android:excludeFromRecents="true"
+            android:launchMode="singleTask"
+            android:taskAffinity="" />
+        
         <!-- Attività per assegnare scorciatoie del launcher -->
         <activity
             android:name=".inputmethod.LauncherShortcutAssignmentActivity"
