--- a/app/build.properties
+++ b/app/build.properties
@@ -1,4 +1,4 @@
 #Build number and date
-#Thu Dec 04 15:28:33 CET 2025
-buildDate=04 dic 2025
-buildNumber=1313
+#Sun Dec 07 22:59:34 EST 2025
+buildDate=07 dic 2025
+buildNumber=1314
