--- a/app/build.properties
+++ b/app/build.properties
@@ -1,4 +1,4 @@
 #Build number and date
-#Wed Dec 10 20:35:59 CET 2025
+#Wed Dec 10 16:17:01 EST 2025
 buildDate=10 dic 2025
-buildNumber=1536
+buildNumber=1550
