new emoji picker, accessible from sym page 3.

--- a/app/build.properties
+++ b/app/build.properties
@@ -1,4 +1,4 @@
 #Build number and date
-#Mon Dec 22 15:16:08 CET 2025
-buildDate=22 dic 2025
-buildNumber=1784
+#Fri Jan 02 21:29:27 CET 2026
+buildDate=02 gen 2026
+buildNumber=1799
