- Changed theme for InstalledDictionariesActivity to include animation - Modified ctrl_key_mappings.json to add action for KEYCODE_P - Enhanced NavModeSettingsScreen to include new action in key mapping options - Added localization strings for new actions and UI elements - Improved backup rules to exclude recent emojis preferences from backup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,7 +83,7 @@
             android:name=".dictionaries.InstalledDictionariesActivity"
             android:exported="false"
             android:label="@string/installed_dictionaries_title"
-            android:theme="@style/Theme.Pastiera" />
+            android:theme="@style/Theme.Pastiera.InstalledDictionariesAnimation" />
 
         <activity
             android:name=".layout.OnlineLayoutsActivity"
