--- a/app/src/main/assets/common/ctrl/ctrl_key_mappings.json
+++ b/app/src/main/assets/common/ctrl/ctrl_key_mappings.json
@@ -36,7 +36,8 @@
       "keycode": "DPAD_CENTER"
     },
     "KEYCODE_P": {
-      "type": "none"
+      "type": "action",
+      "action": "toggle_minimal_ui"
     },
     "KEYCODE_A": {
       "type": "action",
